--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@radix-ui/react-toggle": "^1.1.9",
 		"@radix-ui/react-toggle-group": "^1.1.10",
 		"@radix-ui/react-tooltip": "^1.2.7",
+		"better-auth": "^1.2.8",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -70,6 +71,8 @@
 		"drizzle-kit": "^0.31.1",
 		"eslint": "^9",
 		"eslint-config-next": "15.3.2",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-tailwindcss": "^0.6.12",
 		"tailwindcss": "^4",
 		"tsx": "^4.19.4",
 		"tw-animate-css": "^1.3.4",
