--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev:webhook": "ngrok http --url=valued-resolved-prawn.ngrok-free.app 3000"
+    "dev:webhook": "ngrok http --url=valued-resolved-prawn.ngrok-free.app 3000",
+    "dev:inngest": "inngest-cli dev"
   },
   "dependencies": {
     "@dicebear/collection": "^9.2.2",
     "@dicebear/core": "^9.2.2",
     "@hookform/resolvers": "^5.1.1",
+    "@inngest/agent-kit": "^0.8.0",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -59,8 +61,12 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "embla-carousel-react": "^8.6.0",
+    "global": "^4.4.0",
     "humanize-duration": "^3.33.0",
+    "inngest": "^3.39.1",
+    "inngest-cli": "^1.7.0",
     "input-otp": "^1.4.2",
+    "jsonl-parse-stringify": "^1.0.3",
     "lucide-react": "^0.513.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
@@ -96,5 +102,8 @@
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
-  }
+  },
+  "trustedDependencies": [
+    "inngest-cli"
+  ]
 }
